--- a/lesson/foursquare-etl.ipynb
+++ b/lesson/foursquare-etl.ipynb
@@ -113,13 +113,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get this working, we'll need to fill in the code in `client.py` file, the `venue.py` file and the `venue_builder.py`.  The remaining instructions are in the corresponding files.  Get going :)"
+    "To get this working, we'll need to fill in the code in `client.py` file, the `venue.py` file and the `venue_builder.py`.\n",
+    "\n",
+    "The remaining instructions are in the corresponding test files.  Get going :)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
